# niche_collections

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
crates/derive_macros/: Cargo.toml
crates/derive_macros/src/: lib.rs
src/: lib.rs
src/alloc/: mod.rs
src/alloc/arena/: exclusive.rs  mod.rs  version.rs
src/alloc/arena/version/: collection.rs  guard.rs  handle.rs  mod.rs
src/alloc/manager/: exclusive.rs  mod.rs  version.rs
src/alloc/store/: freelist.rs  intervaltree.rs  masked.rs  mod.rs  simple.rs  soa.rs
src/arena/: exclusive.rs  mod.rs  version.rs
src/manager/: exclusive.rs  mod.rs  version.rs
src/store/: freelist.rs  mod.rs  simple.rs
src/tree/: node.rs
