[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.package]
authors = ["Shirotha"]
version = "0.1.0"
edition = "2024"


[package]
name = "niche_collections"
authors.workspace = true
description = "Collection of specialized data types"
repository = "https://github.com/Shirotha/niche_collections"
version.workspace = true
edition.workspace = true

[features]
serde = ["dep:serde", "parking_lot/serde", "nonmax/serde"]
hardware-lock-elision = ["parking_lot/hardware-lock-elision"]


[workspace.dependencies]
thiserror = "2.0.11"


[dependencies]
derive_macros = { version = "0.1.0", path = "crates/derive_macros" }

generativity = "1.1.0"
nonmax = "0.5.5"
parking_lot = "0.12.3"
paste = "1.0.15"

thiserror.workspace = true
serde = { version = "1.0", features = ["derive"], optional = true }
variadics_please = "1.1.0"
